--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "react-native start",
     "build": "detox build",
     "test": "detox test",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "iosp": "cd ios && open qwiltest.xcworkspace",
+    "pods": "cd ios && rm -rf Pods && rm -rf Podfile.lock && pod install"
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.6",
@@ -40,7 +42,7 @@
     "configurations": {
       "ios.sim.debug": {
         "binaryPath": "ios/build/Build/Products/Debug-iphonesimulator/QwilTest.app",
-        "build": "xcodebuild -project ios/example.xcodeproj -scheme example -configuration Debug -sdk iphonesimulator -derivedDataPath ios/build",
+        "build": "xcodebuild -workspace ios/QwilTest.xcworkspace -scheme QwilTest -configuration Debug -sdk iphonesimulator -derivedDataPath ios/build",
         "type": "ios.simulator",
         "device": {
           "type": "iPhone 11 Pro"
